# RayDemo

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Json.cpp  README.md  ThreadPool.h  dxcompiler.dll.REMOVED.git-id  font.xcf  run_ai043_cpu.bat  run_ai043_gpu.bat  run_bathroom_cpu.bat  run_bathroom_gpu.bat  run_bistro_cpu.bat  run_bistro_gpu.bat  run_bistro_night_cpu.bat  run_bistro_night_gpu.bat  run_coffee_cpu.bat  run_coffee_gpu.bat  run_italian_flat_cpu.bat  run_italian_flat_gpu.bat  run_mustang_cpu.bat  run_mustang_gpu.bat  run_sponza_cpu.bat  run_sponza_gpu.bat  run_staircase_cpu.bat  run_staircase_gpu.bat  run_transparent_machines_cpu.bat  run_transparent_machines_gpu.bat  run_villa_cpu.bat  run_villa_gpu.bat  scenes.blend.REMOVED.git-id  staircase.exr
.gitea/actions/build-linux/: action.yml
.gitea/actions/build-macos/: action.yml
.gitea/actions/build-windows/: action.yml
.gitea/actions/build-windows-ninja/: action.yml
.gitea/actions/checkout/: action.yml
.gitea/actions/img/: action.yml
.gitea/actions/test/: action.yml
.gitea/actions/test-img/: action.yml
.gitea/workflows/: ci.yml  release.yml  schedule.yml
assets/: config.json
assets/fonts/: Consolas.bff  Liberation Mono.bff  Lucida Console.bff  Lucida Console_.bff  Ume_48.bff  bicubik.bff
assets/meshes/mat_test/: env_floor.mtl
assets/references/: ai043_01_cycles.tga  sponza_cycles.tga
assets/scenes/: ai043_01.json  bathroom.json  bistro.json  bistro_night.json  coffee.json  coffee_maker.json  italian_flat.json  mat_test.json  mat_test_dir_light.json  mat_test_dof.json  mat_test_hdr.json  mat_test_hdri.json  mat_test_ior.json  mat_test_mesh_lights.json  mat_test_moon_light.json  mat_test_ray_flags.json  mat_test_sphere_light.json  mat_test_sun_light.json  mat_test_two_sided.json  mustang.json  sponza.json  sponza_simple.json  staircase.json  transparent_machines.json  villa.json
assets/scenes_src/: AI043_001_Blender.blend  bathroom.blend  bistro.blend  bmps_official.blend  coffee_maker.blend  italian_flat.blend  mustang.blend  sponza.blend  staircase.blend  transparent_machines.blend  villa.blend
assets/textures/: 4x4.tga  bistro_env.hdr  bistro_night_env.hdr  dark.tga  flat_normal.tga  font.xcf  grey.tga  grey1.tga  mat_test_moon_light_env.hdr  mat_test_sun_light_env.hdr  rand8x8.tga  rect.tga  sponza_env.hdr  villa_env.hdr
assets/textures/italian_flat/: qwantani_4k.hdr
assets/textures/mat_test/: Fence007A_2K_Color.dds  Fence007A_2K_Metalness.dds  Fence007A_2K_NormalDX.dds  Fence007A_2K_Opacity.dds  Fence007A_2K_Roughness.dds
assets/textures/mustang/: Background_05.hdr
assets/textures/villa/: !kloofendal_48d_partly_cloudy_4k.hdr
src/: CMakeLists.txt
src/DemoApp/: CMakeLists.txt  DemoApp.cpp  DemoApp.h  main.cpp
src/DemoLib/: CMakeLists.txt  Viewer.cpp  Viewer.h
src/DemoLib/eng/: Config.h  GameBase.cpp  GameBase.h  GameStateManager.cpp  Halton.h  Random.cpp  Random.h
src/DemoLib/gui/: BaseElement.h  BitmapFont.cpp  BitmapFont.h  FontStorage.h  Renderer.h  RendererSW.cpp  Utils.h
src/DemoLib/load/: Load.cpp  Load.h
src/DemoLib/ren/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Context.cpp  Context.h  ContextSW.cpp  Fwd.h  MMat.h  Material.cpp  Mesh.cpp  Mesh.h  Program.h  SmallVector.h  Texture.h  TextureSW.h  Utils.cpp  Utils.h  _Ren.cpp
src/DemoLib/ren/SW/: CMakeLists.txt  SWculling.c  SWrasterize.h
src/DemoLib/states/: GSCPUTest.cpp  GSCPUTest.h  GSCreate.cpp  GSCreate.h  GSFibTest.cpp  GSFibTest.h  GSFilterTest.cpp  GSFilterTest.h  GSHDRTest.cpp  GSHDRTest.h  GSHybTest.cpp  GSHybTest.h  GSLightmapTest.cpp  GSLightmapTest.h  GSNoiseTest.cpp  GSNoiseTest.h  GSRayBucketTest.cpp  GSRayBucketTest.h  GSRayTest.cpp  GSRayTest.h  GSSamplingTest.cpp  GSSamplingTest.h  GSVNDFTest.cpp  GSVNDFTest.h  _states.cpp
src/Eng/: CMakeLists.txt  GameBase.cpp  GameBase.h  GameStateManager.cpp  Log.cpp  Log.h  Random.cpp  Random.h  _Eng.cpp
src/Eng/go/: GoID.h
src/Eng/tests/: CMakeLists.txt  main.cpp
src/Gui/: BaseElement.h  CMakeLists.txt  Frame.cpp  Image.cpp  Renderer.h  RendererSW.cpp  Utils.cpp
src/Ray/: .gitignore  .gitrepo  compile_shaders.py
src/Ray/internal/: CoreRef.cpp  CoreRef.h  RendererVK.cpp  RendererVK.h  RendererVK_kernels.cpp
src/Ray/internal/shaders/: nlm_filter.comp.glsl  nlm_filter_interface.h
src/Ray/internal/shaders/output/: nlm_filter.comp.inl  nlm_filter.comp.spv  nlm_filter_f.comp.hlsl  nlm_filter_f.comp.inl  nlm_filter_f.comp.spv  nlm_filter_ff.comp.hlsl  nlm_filter_ff.comp.inl  nlm_filter_ff.comp.spv
src/Ray/tests/: test_materials.cpp
src/Ren/: CMakeLists.txt  Camera.cpp  ContextGL.cpp  Utils.cpp
src/Ren/SOIL2/: CMakeLists.txt  stb_image_write.h
src/Ren/SW/: SWcpu.c  SWtypes.h
src/Ren/SW/tests/: CMakeLists.txt
src/SW/: SWcpu.c  SWintrin.inl  SWrasterize.h
src/SW/tests/: test_pixels.c  test_zbuffer.c
src/Sys/: .gitrepo  AssetFileIO.cpp  AsyncFileReader_aio.cpp  BitmapAlloc.h  CMakeLists.txt  Json.cpp  Json.h  Log.h  MonoAlloc.h  Pack.cpp  PoolAlloc.h  Signal_.h  SmallVector.h  ThreadPool.h  WindowRect.cpp  _Sys.cpp
src/Sys/tests/: CMakeLists.txt  main.cpp  test_json.cpp  test_optional.cpp  test_pack.cpp  test_thread_pool.cpp
src/libs/SDL2/lib/arm64/: SDL2main.lib
src/libs/SOIL2/: stbi_DDS_c.h  stbi_pvr_c.h
src/libs/jpeg/win/arm64/: turbojpeg-static.lib
src/libs/jpeg/win/x64/: turbojpeg-static.lib
tests/: main.cpp  test_thread_pool.cpp
